--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <title>eSports</title>
+        <title>NLW eSports</title>
     </head>
     <!-- Primeiro comentario -->
     <body>
@@ -43,8 +43,8 @@
                             <!--a tag target serve para abrir o link em outra aba do navegador -->
                             <a 
                                 target="_blank"
-                                href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
-                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" alt="imagem do jogo CounterStrike">
+                                href="https://www.twitch.tv/directory/game/Escape%20from%20Tarkov">
+                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/491931_IGDB-144x192.jpg" alt="imagem do jogo Scape From tarkov">
                             </a>
                         </li>
 
@@ -53,7 +53,7 @@
                             <a 
                                 target="_blank"
                                 href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
-                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" alt="imagem do jogo CounterStrike">
+                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/31339_IGDB-144x192.jpg" alt="imagem do jogo Project Zomboid">
                             </a>
                         </li>
                     </ul>
@@ -79,8 +79,8 @@
                             <!--a tag target serve para abrir o link em outra aba do navegador -->
                             <a 
                                 target="_blank"
-                                href="https://www.twitch.tv/gaules">
-                                 <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/f4b12683-57ff-4b57-926a-67512b43a7ff-profile_image-50x50.png">
+                                href="https://www.twitch.tv/paulinholokobr">
+                                 <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/d96bbd7a-26e5-4c5e-b6a5-149d708a973b-profile_image-150x150.png">
                             </a>
                         </li>
 
@@ -88,8 +88,8 @@
                             <!--a tag target serve para abrir o link em outra aba do navegador -->
                             <a 
                                 target="_blank"
-                                href="https://www.twitch.tv/gaules">
-                                 <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/f4b12683-57ff-4b57-926a-67512b43a7ff-profile_image-50x50.png">
+                                href="https://www.twitch.tv/pestily">
+                                 <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/97eba442-5f6b-42a2-8d3e-9067699077b7-profile_image-150x150.png">
                             </a>
                         </li>
                     </ul>
